# TermsForTerms

./: AnalogousEntityMapSpec.txt  LogicalFormatSpec.txt  README.md  abridged_example_legend.txt
Code/: AbridgedTest.py  Constants.py  DGGraph.py  DataController.py  DataEdge.py  DataProcessor.py  DataSubject.py  Datum.py  EntityEdge.py  EntityNode.py  GDPRControl.py  GraphCompare.py  GraphTest.py  GraphTranslate.py  PCEdge.py  ParseIntoGraph.py  Todo.txt  TwitterControl.py  main.py
LogicalFormatExamples/abridgedTest/: AbridgedTest.py
LogicalFormatExamples/abridgedTest/control/: alice_legend.txt  company_legend.txt  merged_legend.txt
LogicalFormatExamples/abridgedTest/tfts/: alice.tft  company.tft  policy.tft
LogicalFormatExamples/controlFigs/: company_legend.txt  gdpr_legend.txt  merged_legend.txt
LogicalFormatExamples/evaluation/: Evaluate.py
LogicalFormatExamples/tfts/: ccpa.tft  gdpr.tft  meta.tft  twitter.tft
TermsForTerms/: LICENSE  README.md  pyproject.toml
TermsForTerms/src/termsforterms/: DGGraph.py  DataController.py  DataEdge.py  DataProcessor.py  DataSubject.py  Datum.py  EntityNode.py  GraphCompare.py  PCEdge.py  ParseIntoGraph.py  __init__.py
TermsForTerms/src/termsforterms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TermsForTerms/src/termsforterms_toogiii/: DataController.py  DataEdge.py  DataProcessor.py  DataSubject.py  Datum.py  EntityEdge.py  EntityNode.py  GraphCompare.py  PCEdge.py  ParseIntoGraph.py
TermsForTerms/termsforterms_toogiii.egg-info/: PKG-INFO  top_level.txt
(+5 files in other folders)
